welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:39: error: Unmatched closing brace '}' ignored here
}
^